<package format="2">
  <name>roboclyde_docker_container</name>
  <version>0.0.0</version>
  <description>
    Docker package for RoboClyde (University of Strathclyde ERC team 2020)
  </description>

  <license>MIT</license>

  <maintainer email="iliane.hifi.2019@uni.strath.ac.uk">Iliane Hifi</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

</package>
